--- a/VirtualStore/src/index.css
+++ b/VirtualStore/src/index.css
@@ -1,10 +1,10 @@
 body {
   margin: 0;
-  padding: 0;
-  width: 100vw;
-  min-height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
-  background: none !important;
-  position: relative;
+  font-family: "Roboto", sans-serif;
+  background-color: #000000;
+}
+
+.logo-hover:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 15px rgba(0, 255, 0, 0.7);
 }
